--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.14.1",
+    "ramda": "^0.26.1",
     "react": "^16.8.4",
+    "react-beautiful-dnd": "^10.0.4",
     "react-dom": "^16.8.4",
+    "react-redux": "^6.0.1",
     "react-scripts": "2.1.5"
   },
   "scripts": {
