--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
+  "homepage": "https://noumanniazi.github.io/DragAndDrop",
   "name": "torello",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "antd": "^3.14.1",
+    "gh-pages": "^2.0.1",
     "ramda": "^0.26.1",
     "react": "^16.8.4",
     "react-beautiful-dnd": "^10.0.4",
@@ -15,7 +17,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
